--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -5,7 +5,7 @@
 				<h1>Partner News</h1>
 			</div>
 			<div class="follow-btn">
-				<button class="follow">
+				<button class="follow" (click)="openSubPopup()">
 					<span>Folowing</span>
 				</button>
 			</div>
