--- a/src/app/popups/popups.component.html
+++ b/src/app/popups/popups.component.html
@@ -1,4 +1,12 @@
 
+<div *ngIf="popupService.getNewsSubscribePopupListener() | async">
+  <app-news-subscribe-popup></app-news-subscribe-popup>
+</div>
+
+<div *ngIf="popupService.getNewsThankYouPopupListener() | async">
+  <app-news-thank-you-popup></app-news-thank-you-popup>
+</div>
+
 <app-notifications-list></app-notifications-list>
 
 <div *ngIf="popupService.getLoginMobilePopupListener() | async">
