create common ieo component and routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -81,6 +81,14 @@
               </div>
 
           </li>
+
+           <!--TEMP LINK for strap-->
+          <li class="menu__item" routerLinkActive="menu__link--active">
+            <a class="menu__link" routerLink="/ieo">
+              <span class="menu__link-text">{{'IEO common' | translate}}</span>
+            </a>
+          </li>
+
           <li class="menu__item menu__item--with-submenu" routerLinkActive="head-menu__link--active">
             <ng-container *ngIf="!isProduction">
                 <!-- *ngIf="!isProduction" -->
