task 2087 and fix show favorit pairs (mob)

--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -92,7 +92,7 @@
                   *ngIf="isAuthenticated"
                 >
                     <span class="table__row-star"
-                          [ngClass]="{'table__row-star--select': isFavorite(pair)}"
+                          [ngClass]="{'table__row-star--select': pair | isFavoritePipe: userFavorites}"
                           (click)="toggleFavorite(pair)">
                       <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
