--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -96,9 +96,15 @@
   <div class="note__title">{{'Please note:' | translate}}</div>
   <ul class="note__list">
     <li class="note__list-item" *ngIf="!!cryptoDataByName">
-      {{'Coins will be deposited immediately after' | translate}} <b>{{cryptoDataByName.minConfirmations}}</b> {{'network confirmations' | translate}}
+      {{'Coins will be deposited immediately after' | translate}}
+      <b>
+        {{cryptoDataByName.minConfirmations | countConfirmations:activeCrypto.name}}
+      </b>
+      {{'network confirmations' | translate}}
     </li>
-    <li class="note__list-item">{{'Send only' | translate}} <b>{{activeCrypto.name}} </b>{{'to this deposit address.'}}{{' Sending any other coin or token to this address may result in the loss of your deposit.' | translate}}
+    <li class="note__list-item">
+      {{'Send only' | translate}} <b>{{activeCrypto.name}} </b>
+      {{'to this deposit address.'  | translate}}{{' Sending any other coin or token to this address may result in the loss of your deposit.' | translate}}
     </li>
   </ul>
 </div>
