DEVEX-2106 addded guard and changed flags

--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -31,7 +31,7 @@
         {{'Fiat' | translate}}
       </button>
       <button
-        *ngIf="!isProd"
+        *ngIf="showContent"
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
         (click)="onSelectTab.emit(Tab.IEO)"
