--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -28,7 +28,7 @@
     [community]="ieoData.community"
   >
   </app-ieo-community>
-  <ng-container *ngIf="!isProd">
+  <ng-container *ngIf="showContent">
     <button (click)="testNotif()">notification test</button>
   </ng-container>
 
