--- a/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
+++ b/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
@@ -1,8 +1,71 @@
-<div style="position: absolute; background: red;">
+<!-- <div style="position: absolute; background: red;">
   <p>
     news-subscribe-popup works!
   </p>
   <button (click)="openThankPopup()">Thank</button>
   <button (click)="closeSubPopup()">close</button>
-</div>
+</div> -->
 
+<div class="overlay">
+	<div class="popup popup-subscribe">
+		<div class="popup__close" (click)="closeSubPopup()"></div>
+
+		<h6 class="popup__title popup_title--dm">Subscribe to news</h6>
+		<!-- login user -->
+		<h4 class="popup__subtitle popup_title--dm">Mailing will be made to the email specified during registration</h4>
+		<!-- end login user -->
+		<!-- not login user -->
+		<h4 class="popup__subtitle popup_title--dm">Enter email to subscribe to news</h4>
+		<!-- end not login user -->
+
+		<!-- login user -->
+		<form class="popup__form" [formGroup]="loginForm">
+			<div>
+				<div class="wrap-input popup__wrap-input">
+					<input class="wrap-input__input" type="text"
+					required
+					(input)="emailInput()"
+					formControlName="email"
+					[ngClass]="{'wrap-input__input--error':
+					!loginForm.get('email').valid
+					&& loginForm.get('email').touched
+					|| statusMessage}">
+					<label class="wrap-input__label" for=""
+					[ngClass]="{'wrap-input__label--error':
+					!loginForm.get('email').valid
+					&& loginForm.get('email').touched
+					|| statusMessage}">
+					{{'Email' | translate}}
+				</label>
+				<div class="wrap-input__line"
+				[ngClass]="{'wrap-input__line--error':
+				!loginForm.get('email').valid
+				&& loginForm.get('email').touched
+				|| statusMessage}">
+			</div>
+			<div
+			*ngIf="loginForm.get('email').touched
+			&& loginForm.get('email').errors != null
+			|| !statusMessage
+			&& loginForm.get('email').errors != null">
+			<div class="input-hint-wrapper">
+				<span
+				class="wrap-input__message wrap-input__message--error"
+				*ngIf="loginForm.get('email').errors['required']">
+				{{'This field is required.' | translate}}
+			</span>
+			<span *ngIf="loginForm.get('email').invalid && !loginForm.get('email').errors['required']"
+			class=" wrap-input__message wrap-input__message--error">
+			{{'Please, enter valid email address.' | translate}}
+		</span>
+	</div>
+</div>
+</div>
+</div>
+</form>
+<!-- login user -->
+<button class="btn popup__btn popup__btn--active"
+(click)="openThankPopup()"
+>Thank</button>
+</div>
+</div>
