--- a/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
+++ b/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
@@ -19,7 +19,7 @@
 		<!-- end not login user -->
 
 		<!-- login user -->
-		<form class="popup__form" [formGroup]="loginForm">
+		<form class="popup__form">
 			<div>
 				<div class="wrap-input popup__wrap-input">
 					<input class="wrap-input__input" type="text"
