list item block + how work block

--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -375,6 +375,7 @@
   padding: 12px .7em;
   border: none;
   cursor: pointer;
+  border: 1px solid #237BEF;
   &.reverse{
     border: 1px solid #237BEF;
     background-color: transparent;
