--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -22,7 +22,7 @@
 					<div class="top-part">
 						<div class="icon-wr">
 							<svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<g clip-path="url(#clip0)">
+								<g>
 									<path d="M33.8615 10.7156L15.3544 22.1141C14.3071 22.7606 13.8115 24.0376 14.1489 25.2187L16.15 32.2499C16.321 32.8494 16.8544 33.2479 17.4683 33.2479C17.5025 33.2479 17.537 33.2467 17.5716 33.2441C18.2278 33.1965 18.7471 32.7077 18.8344 32.0563L19.3547 28.2009C19.4248 27.6821 19.6748 27.1996 20.0579 26.843L35.3302 12.6465C35.7917 12.2186 35.8527 11.5178 35.4724 11.0166C35.0915 10.5149 34.3993 10.3852 33.8615 10.7156ZM18.8367 25.5303C18.1505 26.1691 17.7034 27.0323 17.5779 27.9609L17.3255 29.8311L15.873 24.7271C15.7549 24.3136 15.9288 23.8665 16.2953 23.6403L29.8531 15.2901L18.8367 25.5303Z" fill="white"/>
 									<path d="M44.2679 3.28553C43.6897 2.79545 42.8918 2.66054 42.1851 2.93353L1.32542 18.696C0.516206 19.0081 -0.00410644 19.77 2.44174e-05 20.6371C0.00424317 21.5049 0.532202 22.2626 1.34616 22.5676L10.8902 26.1297L14.6132 38.1026C14.8176 38.7608 15.3336 39.2723 15.9933 39.4707C16.6527 39.669 17.3648 39.5272 17.897 39.0919L23.4464 34.5679C23.7129 34.3507 24.0935 34.3399 24.3717 34.542L34.381 41.8089C34.7411 42.0706 35.166 42.2053 35.5959 42.2053C35.8477 42.2053 36.1012 42.1591 36.3445 42.0651C37.0024 41.8106 37.4809 41.2466 37.6242 40.5566L44.9568 5.28531C45.1108 4.54263 44.8468 3.7764 44.2679 3.28553ZM43.2014 4.921L35.8689 40.1922C35.8424 40.3197 35.7506 40.3727 35.6982 40.393C35.6455 40.4133 35.5413 40.4359 35.4348 40.3584L25.4252 33.0912C24.9778 32.7663 24.4516 32.6051 23.9265 32.6051C23.3536 32.6051 22.7815 32.7971 22.314 33.178L16.7633 37.7031C16.6645 37.7839 16.562 37.7695 16.5098 37.7538C16.4572 37.738 16.3634 37.6931 16.3253 37.5704L12.4717 25.1773C12.3893 24.9125 12.189 24.7007 11.9292 24.6037L1.97422 20.8883C1.82516 20.8325 1.79343 20.7162 1.79299 20.6284C1.79255 20.5414 1.82314 20.4256 1.9708 20.3687L42.8305 4.60627C42.8307 4.60618 42.831 4.60609 42.8312 4.606C42.964 4.55476 43.0621 4.61365 43.1089 4.6532C43.1558 4.69319 43.2305 4.78108 43.2014 4.921Z" fill="white"/>
 									<path d="M37.5715 22.1609C37.0876 22.0558 36.6104 22.363 36.5053 22.8468L36.3691 23.4743C36.2641 23.9582 36.5712 24.4355 37.055 24.5405C37.1191 24.5544 37.183 24.5611 37.2461 24.5611C37.6587 24.5611 38.0301 24.2744 38.1213 23.8547L38.2575 23.2272C38.3625 22.7434 38.0553 22.266 37.5715 22.1609Z" fill="white"/>
@@ -78,5 +78,133 @@
 	</div>
 	<div class="kyc-banner">
 		<img src="assets/img/ieo/kyc-img.png" alt="">
+	</div>
+	<div class="ieo-list">
+		<div class="ieo-list-wr">
+			<div class="ieo-list-item">
+				<div class="img-part">
+					<img src="assets/img/ieo/celler.png" alt="">
+				</div>
+				<div class="info-coin-part">
+					<div class="title-wr">
+						<h3>Celer - BNB Session</h3>
+					</div>
+					<div class="coin-info">
+						<div class="coin-info-item">
+							<div class="name-info">
+								<span>Session Supply</span>
+							</div>
+							<div class="info-value">
+								<span>190,000,000 CELR</span>
+							</div>
+						</div>
+						<div class="coin-info-item">
+							<div class="name-info">
+								<span>Start Time</span>
+							</div>
+							<div class="info-value">
+								<span>1970-01-01 03:00:00</span>
+							</div>
+						</div>
+
+					</div>
+					<div class="description-wr">
+						<p>Celer Network is a leading layer 2 scaling platform that enables fast, easy and secure off-chain transactions for not only payment transactions, but also generalized off-chain smart contract. Founded by four PhDs from MIT, Princeton, UC Berkeley and UIUC, the network enables everyone to quickly build, operate, and use...</p>
+					</div>	
+					<div class="button-part">
+						<div class="button-wr">
+							<button class="standart-btn"><span>Buy Celer</span></button>
+						</div>
+						<div class="button-wr">
+							<button class="standart-btn reverse"><span>Read More</span></button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="ieo-list-item">
+				<div class="img-part">
+					<img src="assets/img/ieo/matic.png" alt="">
+				</div>
+				<div class="info-coin-part">
+					<div class="title-wr">
+						<h3>Celer - BNB Session</h3>
+					</div>
+					<div class="coin-info">
+						<div class="coin-info-item">
+							<div class="name-info">
+								<span>Session Supply</span>
+							</div>
+							<div class="info-value">
+								<span>190,000,000 CELR</span>
+							</div>
+						</div>
+						<div class="coin-info-item">
+							<div class="name-info">
+								<span>Start Time</span>
+							</div>
+							<div class="info-value">
+								<span>1970-01-01 03:00:00</span>
+							</div>
+						</div>
+
+					</div>
+					<div class="description-wr">
+						<p>Celer Network is a leading layer 2 scaling platform that enables fast, easy and secure off-chain transactions for not only payment transactions, but also generalized off-chain smart contract. Founded by four PhDs from MIT, Princeton, UC Berkeley and UIUC, the network enables everyone to quickly build, operate, and use...</p>
+					</div>	
+					<div class="button-part">
+						<div class="button-wr">
+							<button class="standart-btn"><span>Buy Celer</span></button>
+						</div>
+						<div class="button-wr">
+							<button class="standart-btn reverse"><span>Read More</span></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<div class="how-work">
+		<div class="how-work-wr">
+			<div class="title-wr">
+				<h3>How it work?</h3>
+			</div>
+			<div class="how-work-item-wr">
+				<div class="how-work-item">
+					<div class="pic-wr">
+						<img src="assets/img/ieo/how-work1.svg" alt="">
+					</div>
+					<div class="h-w-title">
+						<h4>Verify account</h4>
+					</div>
+					<div class="h-w-description">
+						<p>Only verified accounts can access to IEO. Verification is needed only one time.</p>
+					</div>
+				</div>
+				<div class="how-work-item">
+					<div class="pic-wr">
+						<img src="assets/img/ieo/how-work2.svg" alt="">
+					</div>
+					<div class="h-w-title">
+						<h4>Buy coins in IEO</h4>
+					</div>
+					<div class="h-w-description">
+						<p>IEO starts in a specific time and can end any time after coins are sold.</p>
+					</div>
+				</div>
+				<div class="how-work-item">
+					<div class="pic-wr">
+						<img src="assets/img/ieo/how-work3.svg" alt="">
+					</div>
+					<div class="h-w-title">
+						<h4>Hold or trade</h4>
+					</div>
+					<div class="h-w-description">
+						<p>After sucessfull finishing of IEO coins are delivered to your balance.</p>
+					</div>
+				</div>
+
+			</div>
+		</div>
 	</div>
 </div>
