--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -19,12 +19,7 @@
 		position: relative;
 		.fs-wr{
 			position: relative;
-			max-width: calc(73.7em + 40px);
-			margin: 0 auto;
-			padding: 3.8em 20px 3.6em;
-			@media(max-width: 992px){
-				padding: 2.4em 20px 2.4em;
-			}
+			padding: 3.4em 20px 3.4em;
 		}
 		.title-wr{
 			margin-bottom: 1em;
@@ -156,6 +151,166 @@
 		padding: 1.3em 20px;
 		img{
 			width: 100%;
+		}
+	}
+	.ieo-list{
+
+		.ieo-list-wr{
+			max-width: calc(51.2em + 40px);
+			margin: 0 auto;
+			padding: 1.3em 20px;
+		}
+		.ieo-list-item{
+			margin-bottom: 1em;
+			background-color: #fff;
+			display: flex;
+		}
+		.img-part{
+			width: 17em;
+			img{
+				width: 100%;
+				display: block;
+			}	
+		}
+		.info-coin-part{
+			width: calc(100% - 17em);
+			padding: 1em 1.3em;
+		}
+		.title-wr{
+			margin-bottom: 1em;
+			h3{
+				font-weight: 500;
+				font-size: .9em;
+				line-height: 1.15;
+				color: #191A39;
+			}	
+		}
+		.coin-info{
+			display: flex;
+			justify-content: space-between;
+			margin-bottom: 1em;
+		}
+		.coin-info-item{
+			display: flex;
+			justify-content: space-between;
+			width: calc(50% - .4em);
+			background: #E5EBF5;
+			border-radius: 4px;
+		}
+		.name-info{
+			padding: .5em .65em;
+			span{
+				font-weight: 400;
+				font-size: .6em;
+				line-height: 1.15;
+				display: block;
+				color: #747B8D;
+			}
+		}
+		.info-value{
+			padding: .5em .65em;
+			span{
+				display: block;
+				font-weight: 500;
+				font-size: .65em;
+				line-height: 1.15;
+				color: #24253F;
+
+			}
+		}
+		.description-wr{
+			margin-bottom: 1em;
+			p{
+				font-weight: 400;
+				font-size: .65em;
+				line-height: 1.15;
+				color: #747B8D;
+			}
+		}
+		.button-part{
+			display: flex;
+		}
+		.button-wr{
+			margin-right: .65em;
+			.standart-btn{
+				padding: 7px 1em;
+				span{
+					font-size: 1.05em;
+				}
+				&.reverse{
+					&:hover{
+						span{
+							color: #fff;
+						}
+					}
+					span{
+						color: #237BEF;
+					}
+				}
+			}
+		}
+	}
+	.how-work{
+		.how-work-wr{
+			max-width: calc(51.2em + 40px);
+			margin: 0 auto;
+			padding: 1.3em 20px;
+			padding-top: 4em;
+			padding-bottom: 4em;
+		}
+		.title-wr{
+			margin-bottom: 3em;
+			h3{
+				text-align: center;
+				font-weight: 500;
+				font-size: 1.8em;
+				line-height: 1.3;
+				color: #FFFFFF;
+			}
+		}
+		.how-work-item-wr{
+			display: flex;
+			justify-content: space-between;
+
+		}
+		.how-work-item{
+			width: calc(33.3333% - 2.11em);
+			padding: 1.8em;
+			padding-top: 3em;
+			border: 1px solid #5E5F74;
+			padding-bottom: 2.5em;
+		}
+		.pic-wr{
+			margin-bottom: 2em;
+			display: flex;
+			justify-content: center;
+			height: 4.8em;
+
+			img{
+				display: block;
+				height: 100%;
+
+			}
+		}
+		.h-w-title{
+			margin-bottom: 1em;
+			h4{
+				font-weight: 500;
+				font-size: .9em;
+				line-height: 1.15;
+				text-align: center;
+				text-transform: uppercase;
+				color: #FFFFFF;
+			}
+		}
+		.h-w-description{
+			p{
+				font-weight: 400;
+				font-size: .8em;
+				line-height: 1.15;
+				text-align: center;
+				color: #AAB1C4;
+			}
 		}
 	}
 }
