--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -207,4 +207,40 @@
 			</div>
 		</div>
 	</div>
+	<div class="aditional-info-block">
+		<div class="a-i-b-wr">
+			<div class="security-block">
+				<div class="s-title">
+					<h5>Security</h5>
+				</div>
+				<ul class="s-list">
+					<li class="s-item">
+						<span>In case of unseccessfull IEO all funds will be backed to all participants automatically.</span>
+					</li>
+					<li class="s-item">
+						<span>In case of sucessfull IEO coin will listed on Exchange as soon as   </span>
+					</li>
+					<li class="s-item">
+						<span>Please, remeber that all risks are on your side.</span>
+					</li>
+
+				</ul>
+			</div>
+			<div class="adittional-block">
+				<div class="a-title">
+					<h5>Aditional information</h5>
+				</div>
+				<div class="a-block-item">
+					<a href="#">What are demends to Projects that whant to have IEO?</a>
+				</div>
+				<div class="a-block-item">
+					<a href="#">Why IEO is considered more safe than ICO?</a>
+				</div>
+
+			</div>
+			<div class="warning-block">
+				<p>Awerness: Please remeber that crypto is high risky investments. Ofcourse we do all best to filter projects but all responsibility is still on your syde. </p>
+			</div>
+		</div>
+	</div>
 </div>
