--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -81,7 +81,7 @@
 	</div>
 	<div class="ieo-list">
 		<div class="ieo-list-wr">
-			<div class="ieo-list-item">
+			<div class="ieo-list-item upcoming">
 				<div class="img-part">
 					<img src="assets/img/ieo/celler.png" alt="">
 				</div>
@@ -121,7 +121,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="ieo-list-item">
+			<div class="ieo-list-item success">
 				<div class="img-part">
 					<img src="assets/img/ieo/matic.png" alt="">
 				</div>
