--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -55,7 +55,7 @@
 							</svg>
 						</div>
 						<div class="description-wr">
-							<p>Notify me about upcoming projects in telegram chanel </p>
+							<p>Notify me about upcoming projects <br>in email</p>
 						</div>		
 					</div>
 					<div class="bottom-part">
@@ -63,7 +63,7 @@
 							<form action="#">
 								<div class="wrap-input popup__wrap-input">
 									<input class="wrap-input__input ng-dirty ng-valid ng-touched" required="" type="text">
-									<label class="wrap-input__label" for=""> Email </label>
+									<label class="wrap-input__label" for="">Enter your mail</label>
 								</div>		
 								<div class="button-wr">
 									<button class="standart-btn reverse"><span>Get mail notification</span></button>
@@ -127,7 +127,7 @@
 				</div>
 				<div class="info-coin-part">
 					<div class="title-wr">
-						<h3>Celer - BNB Session</h3>
+						<h3>MATIC - BNB Session</h3>
 					</div>
 					<div class="coin-info">
 						<div class="coin-info-item">
@@ -152,9 +152,6 @@
 						<p>Celer Network is a leading layer 2 scaling platform that enables fast, easy and secure off-chain transactions for not only payment transactions, but also generalized off-chain smart contract. Founded by four PhDs from MIT, Princeton, UC Berkeley and UIUC, the network enables everyone to quickly build, operate, and use...</p>
 					</div>	
 					<div class="button-part">
-						<div class="button-wr">
-							<button class="standart-btn"><span>Buy Celer</span></button>
-						</div>
 						<div class="button-wr">
 							<button class="standart-btn reverse"><span>Read More</span></button>
 						</div>
@@ -189,7 +186,7 @@
 						<h4>Buy coins in IEO</h4>
 					</div>
 					<div class="h-w-description">
-						<p>IEO starts in a specific time and can end any time after coins are sold.</p>
+						<p>IEO starts in a specific time <br>and can end any time after coins are sold.</p>
 					</div>
 				</div>
 				<div class="how-work-item">
